--- a/layout/styles/theme_light.css
+++ b/layout/styles/theme_light.css
@@ -395,7 +395,7 @@
     float: right;
 }
 .c9menu > div.submenu > span {
-    background: url("submenu_arrow.gif") no-repeat right 0;
+    background: url("../images/submenu_arrow.gif") no-repeat right 0;
     width: 4px;
     height: 7px;
     display: block;
@@ -405,7 +405,7 @@
     z-index: 10;
 }
 .c9menu > div.submenu.hover > span {
-    background: url("submenu_arrow.gif") no-repeat right -15px;
+    background: url("../images/submenu_arrow.gif") no-repeat right -15px;
 }
 .c9menu > div.menu_item.disabled {
     color: #9c9c9c;
@@ -423,23 +423,23 @@
     float: left;
 }
 .c9menu > div.menu_item.selected > u {
-    background: url("radio.gif") no-repeat 0 0;
+    background: url("../images/radio.gif") no-repeat 0 0;
 }
 .c9menu > div.menu_item.selected:hover > u {
-    background: url("radio.gif") no-repeat 0 -16px;
+    background: url("../images/radio.gif") no-repeat 0 -16px;
 }
 .c9menu > div.menu_item.checked > u {
-    background: url("check.gif") no-repeat 0 0;
+    background: url("../images/check.gif") no-repeat 0 0;
 }
 .c9menu > div.menu_item.checked:hover > u {
-    background: url("check.gif") no-repeat 0 -16px;
+    background: url("../images/check.gif") no-repeat 0 -16px;
 }
 .c9menu > div.menu_item.disabled > u {
     opacity: 0.2;
 }
 .c9menu > div.menu_item.checked.disabled > u {
-    background: url("check.gif") no-repeat 0 0;
+    background: url("../images/check.gif") no-repeat 0 0;
 }
 .c9menu > div.menu_item.selected.disabled > u {
-    background: url("radio.gif") no-repeat 0 0;
+    background: url("../images/radio.gif") no-repeat 0 0;
 }
