refactored Accordion, Box, Pane

--- a/layout/menu.html
+++ b/layout/menu.html
@@ -633,7 +633,7 @@ window.$addDefs = function addDefs(menuManager, menuDefs, root) {
 
 </script>
 <script>
-    require(["layout/menu.js"], function({MenuManager}) {
+    require(["layout/widgets/menu.js"], function({MenuManager}) {
         var menuManager = new MenuManager();
         window.menuManager = menuManager;
 
