--- a/layout/styles/dropdown.css
+++ b/layout/styles/dropdown.css
@@ -1,4 +1,5 @@
 .black_dropdown {
+    display: inline-block;
     position: relative;
     overflow: hidden;
     height: 21px;
@@ -33,7 +34,7 @@
     top: 0;
     right: 0;
     background-repeat: no-repeat;
-    background-image: url(../images/dropdown-dark-glossy/button@1x.png);
+    background-image: url(../layout/images/dropdown-dark-glossy/button@1x.png);
     background-size: 9px 13px;
     background-position: 4px 4px;
 }
