--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -5,8 +5,7 @@
     height: 21px;
     border-radius: 3px;
     border: 1px solid #1c1c1c;
-    background: #383838;
-    background-image: linear-gradient(0deg, #323232 0%, #383838 100%);
+    background: #383838 linear-gradient(0deg, #323232 0%, #383838 100%);
     box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.15) inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.1);
     text-shadow: none;
     min-height: 19px !important;
@@ -34,7 +33,7 @@
     top: 0;
     right: 0;
     background-repeat: no-repeat;
-    background-image: url(../layout/images/dropdown-dark-glossy/button@1x.png);
+    background-image: url(../images/dropdown-dark-glossy/button@1x.png);
     background-size: 9px 13px;
     background-position: 4px 4px;
 }
@@ -42,6 +41,5 @@
     background-image: linear-gradient(0deg, #2f2f2f 0%, #3f3f3f 100%);
 }
 .black_dropdownDown {
-    background: #2d2d2d;
-    background-image: linear-gradient(0deg, #2d2d2d 0%, #363636 100%);
+    background: #2d2d2d linear-gradient(0deg, #2d2d2d 0%, #363636 100%);
 }
