add new editor type - PreviewEditor

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -200,3 +200,11 @@ body {
     margin-left: 0;
 }
 
+iframe {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
