fix loaders to support webpack5 asset modules; add `style-loader` and `css-loader`

--- a/styles/dropdown.css
+++ b/styles/dropdown.css
@@ -33,7 +33,7 @@
     top: 0;
     right: 0;
     background-repeat: no-repeat;
-    background-image: url(../../images/dropdown-dark-glossy/button@1x.png);
+    background-image: url(../images/dropdown-dark-glossy/button@1x.png);
     background-size: 9px 13px;
     background-position: 4px 4px;
 }
