fix tab drag and drop iframe issue

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,7 +2,7 @@ body {
     font-family: Tahoma, sans-serif;
 }
 
-body.dragging iframe {pointer-events: none;}
+body.disableIframe iframe {pointer-events: none;}
 
 .splitter {
     background: var(--splitter-color);
